--- a/index.html
+++ b/index.html
@@ -362,9 +362,7 @@
       </small>
     </div>
     
-    <div class="core-circle">
-      CORE<br />VALUES
-    </div>
+
     
     <div class="value-box right-top">
       <SPAN>Value Team-work</SPAN><br /> 
@@ -393,11 +391,11 @@
 
 <footer class="footer" id="Social-media">
   <div class="social-icons">
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-youtube"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fas fa-envelope"></i></a>
-    <a href="#"><i class="fab fa-tiktok"></i></a>
+<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+<a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+<a href="mailto:eddanguiryouness@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+<a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
   </div>
 
   <p>2025 CowWorker. All rights reserved. | Designed with ❤️ by Eddanguir Youness</p>
